# Syntax

./: CMakeLists.txt  README.md
CMake/: cmake1.txt
C_Cpp/: 1.01_printf_scanf.c  1.02_sizeof.c  1.03_tip_donusumu.c  1.04_if_elseif_else.c  1.05_for.c  1.06_while_dowhile.c  1.07_switch_case.c  1.08_break_continue.c  1.09_questionmark_operatoru.c  1.10_bitler_uzerinde_islem.c  1.11_bitler_uzerinde_kaydirma.c  1.14_max_min.c  1.15_define.c  1.17_getch_getche.c  1.18_getchar_putchar.c  1.19_struct.c  1.20_fonksiyonlar.c  1.21_degisken_sayida_parametre_alan_fonksiyonlar.c  1.22_register.c
C_Cpp/OOP/: 1.25_coklu_kalitim_(diomand_sorunu).cpp
Matlab/: arduino_real_time_plot.m
Python/: 1.01_print.py  1.02_type.py  1.03_len.py  1.04_pow.py  1.05_input.py  1.06_tip_donusturuculeri.py  1.07_eval_exec.py  1.08_degiskenlerin_degerlerini_degistirmesi.py  1.09_format.py  1.10_if_else.py  1.11_round.py  1.12_and_or_not_in.py  1.13_id_is.py  1.14_while.py  1.15_for.py  1.16_pass_break_continue.py  1.17_repr.py  1.18_hata_yakalama.py  1.20_dir_help.py  1.23_%_bicimlendirme.py  1.24_f_string.py  1.39_ic_ice_fonksiyonlar.py
